
*r145
- Fixed HEAT and its variants not penetrating as it should

*r146
- Weapon spread now uses proper math
- Grenades go where you're actually aiming
- Grenades don't spawn until the throwing animation plays
- No more grenade spam
- Death while playing grenade throw animation spawns a grenade at your death position
- Recoil on some automatic weapons tweaked
- Grenades and mines now spawn with far less ammo

*r147
- Attempt to fix: https://trello.com/c/it39Qwwk - cheezus

*r148
- Added fuze Plunging. Recreates the TOW-2B special capacity.
- Done NADMOD optional. No longer needed for clients. However, DP will be disabled without that.
- Added angle effectiveness into ERA
- Added a bunch of new balances to missiles. Improved arty flights.
- Added new SWEPs: flare gun and smoke grenade. Courtesy of Cheezus
- Added ACF3's traceline workaround. You should not have issues with traces anymore.
- Added New armor analyzer. Its under WIP but feel free to make suggestions. This one will eventually surpass the old one.
- Added acfPropArmorData() function (E2/SF) Courtesy of Cheezus
- Fixed some exploits with ammo and collision group. Thanks ally by the report and cheezus by actually making it.
- Fixed several typos on code naming. Courtesy of KemGus
- Improved ghosting time. Now Missiles should be less likely to self hit your own vehicle if moving.
- Removed old ghosting time convar. Useless at this point.

*r149
- Avoided serverside function being called on client realm when executing acf_enable_dp

*r150
- Updated the new armor analyzer. Added many new features.
- Fixed rounding values for RPMfunction in general.

*r151
- Reworked traces. Now bullets should hit the proper player hitbox. Courtesy of Cheezus
- Fixed APHE/CBC fuse. Not really precise but works now.
- Fixed sounds playing twice on SWEPs when watching another player shooting

*r152
- Added COLLISION_GROUP_VEHICLE as valid collision group for legality checks